<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/value_textview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:padding="8dp"
        android:text="0"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="96sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ac_button"
            style="@style/CalculatorFirstRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ac_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plus_minus_button"
            style="@style/CalculatorFirstRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus_minus_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/modulus_button"
            style="@style/CalculatorFirstRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/modulus_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/division_button"
            style="@style/CalculatorOrangeRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/division_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/seven_button"
            style="@style/CalculatorInputButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="7" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/eight_button"
            style="@style/CalculatorInputButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nine_button"
            style="@style/CalculatorInputButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/multiply_button"
            style="@style/CalculatorOrangeRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:text="@string/multiply_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/four_button"
            style="@style/CalculatorInputButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/five_button"
            style="@style/CalculatorInputButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/six_button"
            style="@style/CalculatorInputButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/minus_button"
            style="@style/CalculatorOrangeRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="-" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/one_button"
            style="@style/CalculatorInputButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/two_button"
            style="@style/CalculatorInputButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/three_button"
            style="@style/CalculatorInputButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plus_button"
            style="@style/CalculatorOrangeRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="+" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/zero_button"
            style="@style/CalculatorInputButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/period_button"
            style="@style/CalculatorInputButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="." />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/equals_button"
            style="@style/CalculatorOrangeRow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equals" />
    </LinearLayout>

</LinearLayout>